<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/tvFromDateTime"  android:text="From: "
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etFromDateTime" android:layout_alignStart="@+id/btnCancel"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/etFromDateTime" android:inputType="date"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
        android:layout_marginTop="38dp" android:ems="10" android:textSize="24sp" />
    <TextView
        android:id="@+id/tvToDateTime"  android:text="To: "
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true" android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginTop="98dp" android:textSize="24sp" />
    <EditText
        android:id="@+id/etToDateTime" android:inputType="date"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvToDateTime" android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp" android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLongMax"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="112dp"
        android:text="Keywords: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etKeywords" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignStart="@+id/go"
        android:layout_centerVertical="true" android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLongMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="234dp"
        android:text="LongMin: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongMin"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_alignBottom="@+id/etKeywords"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="-57dp"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLongMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="190dp"
        android:text="LongMax: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLongMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_alignBottom="@+id/etLongMin"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-54dp"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLatMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="122dp"
        android:text="LatMin: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_alignBottom="@+id/etLongMax"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-57dp"
        android:ems="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLatMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_alignStart="@+id/tvFromDateTime"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="72dp"
        android:text="LatMax: "
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etLatMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/go"
        android:layout_alignBottom="@+id/etLongMax"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-111dp"
        android:ems="10"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCancel" android:text="Cancel" android:onClick="cancel"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />
    <Button
        android:id="@+id/go"  android:onClick="go" android:text="Go"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" android:layout_alignTop="@+id/btnCancel"
        android:layout_marginEnd="128dp" />
</RelativeLayout>