<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.photo.MainActivity">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@mipmap/ic_launcher"

        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="left"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/btnCamera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="right"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_alignBaseline="@+id/btnCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Picture"
        android:onClick="takePicture"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_alignStart="@+id/btnLeft" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLeft"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginBottom="0dp"
        android:onClick="shareImage"
        android:text="Share" />

    <Button
        android:id="@+id/btnCaption"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_below="@+id/ivMain"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="42dp"
        android:layout_toStartOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft"
        android:text="Change Caption" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivMain"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="214dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="41dp"
        android:layout_toStartOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft"
        android:text="Upload" />

    <TextView
        android:id="@+id/TimeStamp"
        android:layout_width="118dp"
        android:layout_height="42dp"

        android:layout_alignBottom="@+id/ivMain"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="-139dp"
        android:layout_toStartOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft"
        android:inputType="date"
        android:text="TimeStamp" />

    <TextView
        android:id="@+id/Lat_Text"
        android:layout_width="118dp"
        android:layout_height="42dp"

        android:layout_alignBottom="@+id/ivMain"
        android:layout_marginStart="182dp"
        android:layout_marginEnd="-76dp"
        android:layout_marginBottom="-122dp"
        android:layout_toStartOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft"
        android:inputType="date"
        android:text="Latitude" />

    <TextView
        android:id="@+id/Long_Text"
        android:layout_width="118dp"
        android:layout_height="42dp"

        android:layout_alignBottom="@+id/ivMain"
        android:layout_marginStart="181dp"
        android:layout_marginEnd="-75dp"
        android:layout_marginBottom="-168dp"
        android:layout_toStartOf="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft"
        android:inputType="date"
        android:text="Longitude" />

    <EditText
        android:id="@+id/Caption"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivMain"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-74dp"
        android:layout_toStartOf="@+id/btnRight" />


</RelativeLayout>
